adding short abstract

--- a/idemix-middlelayer-spec/PrivateCredSpecification.tex
+++ b/idemix-middlelayer-spec/PrivateCredSpecification.tex
@@ -351,21 +351,22 @@
 
 
 % Title
-\title{Specification of the Identity Mixer Cryptographic Library}
+\title{VC-ZKLang\\  \large Specification of Privacy-Enhancing Implementation of Verifiable Claims}
 
 % Authors
-\author{Version 3.0.36\\[5pt]IBM Research -- Zurich
-% \thanks{This work has been funded by the European Community's 
-% Seventh Framework Programme (FP7/2007-2013) under grant agreement 
-% no.~216483.}
-}
+\author{Jan Camenisch \and Manu Drijvers \and ?}
 
 
 \maketitle
 
 % Abstract (mainly from the original Idemx Spec)
 %\input{0_abstract}
-
+\begin{abstract}
+This document specifies an language that allow one to describe the cryptographic protocols
+that will generate a cryptographic token as a witness to a verifiable claim.
+The cryptographic protocol that will then be executed from this specification should be (but need not be) 
+such that the token is not linkable to the credentials on which it is based.
+\end{abstract}
 
 % Table of Contents
 \newpage
