--- a/idemix-middlelayer-spec/PrivateCredSpecification.tex
+++ b/idemix-middlelayer-spec/PrivateCredSpecification.tex
@@ -408,7 +408,7 @@ such that the token is not linkable to the credentials on which it is based.
 
 \newpage
 \bibliographystyle{alpha}
-\bibliography{repageba,biche}
+\bibliography{idemix-spec-3.0.36/repageba,idemix-spec-3.0.36/biche,references}
 
 %\newpage
 %\input{appendix}
