add interactive protocol
Signed-off-by: Lovesh <lovesh.harchandani@evernym.com>

--- a/zklang/prelims.tex
+++ b/zklang/prelims.tex
@@ -34,7 +34,11 @@ We make no assumptions about the ease or difficulty of testing membership of a s
 Any witness w $\in$ \textit{$W_R$(s)} that satisfies the latter bound is called an NP-witness that s $\in$ \textit{$L_R$} . If \textit{$L_R$} is an NP-language, then we call the relation R an NP-relation. Viewing \textit{$W_R$(s)} as the set of proofs that s $\in$ \textit{$L_R$}, we can interpret NP as the class of languages whose strings each have one or more "short" proofs of membership that can be checked in polynomial time.
 \newline
 \newline
-\textit{Interactive protocols}. A protocol is a system of rules describing the sequence, syntax, and semantics of message exchange between two or more interactive algorithms where each exchange is called a move and 2 consecutive moves constitute a round. Protocols comprising just one move are called non-interactive protocols and those comprising two or more moves are called interactive protocols. We will be dealing with two-party protocols called interactive proof systems, which involve a pair of interactive algorithms that play two distinct roles: one algorithm is the prover and the other algorithm is the verifier. The "honest" prover and verifier algorithms are denoted by P and V respectively, potential "dishonest" impostors, \textit{$P^{*}$} and \textit{$V^{*}$} denote arbitrary algorithms taking on the prover and verifier roles in the protocol 
+\textit{Interactive protocols}. A protocol is a system of rules describing the sequence, syntax, and semantics of message exchange between two or more interactive algorithms where each exchange is called a move and 2 consecutive moves constitute a round. Protocols comprising just one move are called non-interactive protocols and those comprising two or more moves are called interactive protocols. We will be dealing with two-party protocols called interactive proof systems, which involve a pair of interactive algorithms that play two distinct roles: one algorithm is the prover and the other algorithm is the verifier. The "honest" prover and verifier algorithms are denoted by P and V respectively, potential "dishonest" impostors, \textit{$P^{*}$} and \textit{$V^{*}$} denote arbitrary algorithms taking on the prover and verifier roles in the protocol. If P is an interactive algorithm, then P(w) denotes P given the string w $\in$ \(\Lambda^{*}\) as its private auxiliary input. If V is a second interactive algorithm, then (P, V) denotes the protocol arising when P interacts with V, and $\langle$P, V$\rangle$(s) denotes the random variable describing the output of V in such an interaction when the common input string is s $\in$ S. P always makes the final move in an interactive proof, after which V checks one or more verification equations to decide whether it should accept or reject the interaction. $Pr[1 \gets \langle P, V \rangle (s)]$ denotes the probability that "V accepts" and $Pr[0 \gets \langle P, V \rangle (s)]$ denotes the probability that "V rejects"
 \newline
-
+Subsequent definitions assume an alphabet \(\Lambda\), S and W as infinite subsets of \(\Lambda^{*}\), an infinite relation $R \subseteq S \times W$ and an NP language \textit{$L_R$} 
+\newline
+\newline
+\textit{Interactive proof}. 
+\newline
 \end{document}
