--- a/zklang/prelims.tex
+++ b/zklang/prelims.tex
@@ -71,9 +71,9 @@ A two-party interactive protocol (P, V) is zero-knowledge on \textit{$L_R$} if, 
 \newline
 \textit{ Camenisch-Stadler notation}. The notation is used to denote systems for honest-verifier (verifier always chooses random values when it is supposed to and does not try to act on previously seen values) zero-knowledge proofs of knowledge.
 \begin{itemize}
-  \item $PK{w : R(s,w) = 1}$ denotes an honest-verifier zero-knowledge proof (or argument) of knowledge of a witness \textit{w} $\in$ \textit{$W_R$(s)}. By convention, any values that appear to the left of the colon constitute a witness that ${P^{*}}$ is proving knowledge of, and any values that appear only to the right of the colon are public.
+  \item $PK\{w : R(s,w) = 1\}$ denotes an honest-verifier zero-knowledge proof (or argument) of knowledge of a witness \textit{w} $\in$ \textit{$W_R$(s)}. By convention, any values that appear to the left of the colon constitute a witness that ${P^{*}}$ is proving knowledge of, and any values that appear only to the right of the colon are public.
   \item An interactive proof system (P, V) is called \emph{public coin} if the messages that honest V sends to P on common input \textit{s} $\in$ \textit{S} contain only uniform random strings from some publicly known "challenge" domain \textit{C(s)} 
-  \item \emph{Fiat-Shamir Transform}: To convert a public coin system of Interactive Honest Verifier Zero Knowledge (IHVZK) proofs, replace \textit{V} with cryptographically secure hash function $H_s$ with range \textit{C(s)}. Whenever in IHVZK \textit{V} sends a random message, in NIHVZK, \textit{P} computes a random message by evaluating $H_s$ on the entire transcript until the current move. This is the \emph{Fiat-Shamir Transform}. Also \textit{V} can start the transcript with a random nonce $M$ forcing \textit{P} to compute a new proof every time and preventing \textit{P} to use any previously used proofs.
-  \item $SPK{w : R(s,w) = 1}(M)$ is the non-interactive form of $PK{w : R(s,w) = 1}$ using \emph{Fiat-Shamir Transform} and the nonce $M$. SPK stands for signature proofs of knowledge since an accepting transcript with common input s and $M$ can be seen as P's signature over $M$ where witness \textit{w} $\in$ \textit{$W_R$(s)} is the private key. 
+  \item \emph{Fiat-Shamir Transform}: To convert a public coin system of Interactive Honest Verifier Zero Knowledge (IHVZK) proofs, replace \textit{V} with cryptographically secure hash function $H_s$ with range \textit{C(s)}. Whenever in IHVZK \textit{V} sends a random message, in Non Interactive Honest Verifier Zero Knowledge (NIHVZK), \textit{P} computes a random message by evaluating $H_s$ on the entire transcript until the current move. This is the \emph{Fiat-Shamir Transform}. Also \textit{V} can start the transcript with a random nonce $M$ forcing \textit{P} to compute a new proof every time and preventing \textit{P} to use any previously used proofs.
+  \item $SPK\{w : R(s,w) = 1\}(M)$ is the non-interactive form of $PK\{w : R(s,w) = 1\}$ using \emph{Fiat-Shamir Transform} and the nonce $M$. SPK stands for signature proofs of knowledge since an accepting transcript with common input s and $M$ can be seen as P's signature over $M$ where witness \textit{w} $\in$ \textit{$W_R$(s)} is the private key. 
 \end{itemize}
 \end{document}
