--- a/zklang/background.tex
+++ b/zklang/background.tex
@@ -5,7 +5,7 @@
 \usepackage{amssymb,amsthm,amsmath,amsfonts,longtable,comment,array,ifpdf,hyperref,url}
 \usepackage{graphicx}
 
-\title{Preliminaries}
+\title{Background}
 \author{Lovesh Harchandani}
 \date{5th January 2018, version 0.1}
 
