Update to be in sync with sharelatex

--- a/zklang/basics.tex
+++ b/zklang/basics.tex
@@ -16,6 +16,12 @@
 
 Currently there exists many different methods for describing zero knowledge proofs in cryptographic mathematical notation. Zero Knowledge Language or ZKLang attempts to create a formal language to describe basic programmer mappings of zero knowledge proofs to complex cryptographic algorithms.~\footnote{\url{https://docs.google.com/presentation/d/1Zt1oRXASoKo03mnDpG7kNhjMDv6v4GhfIPNO6_aTEYM/edit?usp=sharing}}
 
+\section{Background}
+
+\subsection{Set Theory}
+
+The symbols that will be used in zero knowledge proof statements can be found here~\footnote{\url{https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols#Set_and.2For_logic_notation}}
+
 \section{Terminology}
 
 ZKLang requires new terminology which should be easy to understand and expressive to write.\newline
@@ -36,7 +42,8 @@ $c=Comm(a, r_0)$, $C_1=Comm(a, r_1)$, $C_2=Comm(c, r_2)$. $C_2$ is a commitment 
 \textbf{SPK}: Signature Proof of Knowledge\newline
 
 \section{Statements}
-ZKLang ultimately describes zero knowledge statements. Statements are defined using a proof pattern, i.e., a term $ZK, NIZK, SPK, DComm, etc.$ with a list of messages or values that are included in the proof called the declaration. Declaration values contained in parenthesis $()$ are considered hidden messages or not revealed while values contained in brackets $[]$ are known or revealed. The entire pattern is contained in braces. The proof describes what a verifier accepts. For example, $NIZK\{(m_1, m_2, m_3)[m_4]: Credential(PK_I, m_1, m_2, m_3, m_4)\}$ means Non Interactive Zero-knowledge proof of Knowledge for messages $m_1, m_2, m_3, m_4$ where $m_1, m_2, m_3$ are hidden messages, $m_4$ will be revealed and the proof is a credential over those messages that can be verified using public key $PK_I$. Another example is the proof for describing $DComm(C1, C2)$ is: $SPK\{(a, c, r_0, r_1, r_2)[C_1, C_2]: c=Comm(a, r_0) \wedge C_1 = Comm(a, r_1) \wedge C_2 = Comm(c, r_2)\}$. \newline
+ZKLang ultimately describes zero knowledge statements. Statements are defined using a proof pattern, i.e., a term $ZK, NIZK, SPK, DComm, etc.$ with a list of messages or values that are included in the proof called the declaration. Declaration values contained in parenthesis $()$ are considered hidden messages or not revealed while values contained in brackets $[]$ are known or revealed. The entire pattern is contained in braces \{\}. The proof describes what a verifier accepts. The idea is that the pattern can be read from left to right so it describes what the verifier needs and the prover knows.
+For example $NIZK\{(m_1, m_2, m_3)[m_4]: Credential(PK_I, m_1, m_2, m_3, m_4)\}$ means Non Interactive Zero-knowledge proof of Knowledge for messages $m_1, m_2, m_3, m_4$ where $m_1, m_2, m_3$ are hidden messages, $m_4$ will be revealed and the proof is a credential over those messages that can be verified using public key $PK_I$. Another example is the proof for describing $DComm(C1, C2)$ is: $SPK\{(a, c, r_0, r_1, r_2)[C_1, C_2]: c=Comm(a, r_0) \wedge C_1 = Comm(a, r_1) \wedge C_2 = Comm(c, r_2)\}$. \newline
 
 \bibliographystyle{alpha}
 \bibliography{zklang}
