fixed issue with URL that was not escaped; adjusted gitignore for another ide

--- a/zklang/basics.tex
+++ b/zklang/basics.tex
@@ -20,7 +20,7 @@ Currently there exists many different methods for describing zero knowledge proo
 
 \subsection{Set Theory}
 
-The symbols that will be used in zero knowledge proof statements can be found here~\footnote{\url{https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols#Set_and.2For_logic_notation}}
+The symbols that will be used in zero knowledge proof statements can be found here~\footnote{\url{https://oeis.org/wiki/List_of_LaTeX_mathematical_symbols\#Set_and.2For_logic_notation}}
 
 \section{Terminology}
 
@@ -49,3 +49,4 @@ For example $NIZK\{(m_1, m_2, m_3)[m_4]: Credential(PK_I, m_1, m_2, m_3, m_4)\}$
 \bibliography{zklang}
 
 \end{document}
+
